# cdn-ssl-updater

./: .gitignore  Cargo.toml  README.md  config.yaml  domains.json  domains.txt
.github/workflows/: build.yml
src/: config.rs  domain.rs  error.rs  lib.rs  main.rs
src/cdn/: mod.rs  tencent.rs
src/cli/: args.rs  command.rs
src/dns/: mod.rs  tencent.rs
src/ssl/: check.rs  mod.rs  tencent.rs  utils.rs
