[package]
name = "csu"
version = "1.0.1"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "csu"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
config = "0.15.19"
once_cell = "1.18"
async-trait = "0.1"
clap = { version = "4.5.53", features = ["derive"] }
glob = "0.3"
dirs = "6.0.0"
tabled = "0.20"
reqwest = { version = "0.12.24", features = ["json"] }
tempfile = "3.23.0"

[profile.release]
lto = true