[package]
name = "csu"
version = "2.0.1"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "csu"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
config = "0.15.19"
once_cell = "1.18"
async-trait = "0.1"
clap = { version = "4.5.53", features = ["derive"] }
glob = "0.3"
dirs = "6.0.0"
tabled = "0.20"
reqwest = { version = "0.12.24", features = ["json"] }
tempfile = "3.23.0"
native-tls = "0.2.14"
x509-parser = "0.18.0"
thiserror = "2.0.17"
futures = "0.3.31"
tokio-stream = "0.1.17"
base64 = "0.22.1"
zip = "6.0.0"
tencent-sdk ={ git = "https://github.com/iKeepLearn/tencent-sdk-rust.git"}
# tencent-sdk ={ path = "../tencent-sdk-rust"}

[profile.release]
lto = true
